# minhook

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: MinHook.h
samples/: CMakeLists.txt  sample.c
src/: CMakeLists.txt  MinHook.rc  buffer.c  hook.c  trampoline.c
src/hde/: hde32.c
